bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: reassignment to val
      if (litMessage="R")
                    ^BDR:6: error: reassignment to val
      if (litMessage="L")
                    ^BDR:8: error: reassignment to val
      if (litMessage="I")
                    ^BDR:10: error: reassignment to val
      if (litMessage="A")
                    ^BDR:12: error: reassignment to val
      if (litMessage="B")
                    ^BDR:14: error: reassignment to val
      if (litMessage="C")
                    ^BDR:16: error: reassignment to val
      if (litMessage="Z")
                    ^BDR:18: error: reassignment to val
      if (litMessage="y")
                    ^BDR:20: error: reassignment to val
      if (litMessage="x")
                    ^